# sunflower-radio

./: .gitignore  .mcp.json  CLAUDE.md  Readme.md
.agentvibes/: install-manifest.json
.agentvibes/bmad/: bmad-voices.md
.claude/: settings.json
.claude/config/: audio-effects.cfg  tts-pretext.txt
.claude/hooks/: audio-processor.sh  background-music-manager.sh  bmad-party-speak.sh  bmad-speak-enhanced.sh  bmad-speak.sh  bmad-tts-injector.sh  bmad-voice-manager.sh  language-manager.sh  migrate-to-agentvibes.sh  path-resolver.sh  personality-manager.sh  piper-download-voices.sh  piper-voice-manager.sh  play-tts-agentvibes-receiver-for-voiceless-connections.sh  play-tts-enhanced.sh  play-tts-macos.sh  play-tts-piper.sh  play-tts-soprano.sh  play-tts-ssh-remote.sh  play-tts-termux-ssh.sh  play-tts-windows-receiver.sh  play-tts.sh  provider-commands.sh  provider-manager.sh  session-start-tts.sh  stop-tts.sh  tts-queue-worker.sh  tts-queue.sh  verbosity-manager.sh  voice-manager.sh
docs/: decisions.md  homework.md
docs/explanations/: static-export.md
pi-backend/: CLAUDE.md  pyproject.toml
pi-backend/sunflower_radio/: __init__.py  __main__.py  api.py  broadcaster.py  dispatch.py  events.py  radio_cli.py  settings.py  state.py  stations.py
pi-backend/tests/: test_api.py  test_broadcaster.py  test_dispatch.py  test_events.py  test_main.py  test_radio_cli_integration.py  test_settings.py  test_smoke.py  test_state.py  test_stations.py
pi-backend/tests/fixtures/: ensemble_scan.json  fake_radio_cli
tools/: check  deploy  install  logs  restart  setup  smoke
tools/git-hooks/: pre-commit
web/: .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/app/: globals.css  (+2 more)
(+19 files in other folders)
